💥 Add insert cards with SEO + scroll effects to Vault page

--- a/vault.html
+++ b/vault.html
@@ -342,7 +342,7 @@
 
   <!-- Flash Sale Banner -->
   <div class="vault-card flash-sale fade-in" style="text-align:center;">
-    <img src="assets/ChatGPT_Image_Jul_1_2025_08_59_50_AM.png" 
+    <img src="assets/images/10_percet_off.png" 
          alt="10% OFF Flash Sale - Use Code Xana10 for $25+ Orders" 
          title="Flash Sale - 10% OFF with Code Xana10" 
          style="max-width:400px; width:100%; border-radius:10px;">
@@ -350,7 +350,7 @@
 
   <!-- Insight Tweet Card -->
   <div class="vault-card insight-tweet fade-in" style="text-align:center;">
-    <img src="assets/ChatGPT_Image_Jul_1_2025_02_23_04_PM.png" 
+    <img src="assets/images/tweet.png" 
          alt="I thought I needed followers, but I needed better products." 
          title="Tweet: Better Products Drive Sales – Not Just Followers" 
          style="max-width:400px; width:100%; border-radius:10px;">
@@ -358,7 +358,7 @@
 
   <!-- Creator Contrast Card -->
   <div class="vault-card contrast-choice fade-in" style="text-align:center;">
-    <img src="assets/ChatGPT_Image_Jul_1_2025_02_30_21_PM.png" 
+    <img src="assets/images/2types.png" 
          alt="Two types of creators: one downloads, one builds." 
          title="Creator Types: Template Collector vs Builder-Doer" 
          style="max-width:400px; width:100%; border-radius:10px;">
