💥 Add insert cards with SEO + scroll effects to Vault page

--- a/vault.html
+++ b/vault.html
@@ -342,12 +342,12 @@
 
   <!-- Flash Sale Banner -->
   <div class="vault-card flash-sale fade-in" style="text-align:center;">
-    <img src="assets/images/10_percet_off.png" 
+    <img src="assets/images/10_percent_off.png" 
          alt="10% OFF Flash Sale - Use Code Xana10 for $25+ Orders" 
          title="Flash Sale - 10% OFF with Code Xana10" 
          style="max-width:400px; width:100%; border-radius:10px;">
   </div>
-
+<!-- Force Load -->
   <!-- Insight Tweet Card -->
   <div class="vault-card insight-tweet fade-in" style="text-align:center;">
     <img src="assets/images/tweet.png" 
