💥 Add insert cards with SEO + scroll effects to Vault page

--- a/vault.html
+++ b/vault.html
@@ -342,7 +342,7 @@
 
   <!-- Flash Sale Banner -->
   <div class="vault-card flash-sale fade-in" style="text-align:center;">
-    <img src="images/10_percent_off.png" 
+    <img src="/images/10_percent_off.png" 
          alt="10% OFF Flash Sale - Use Code Xana10 for $25+ Orders" 
          title="Flash Sale - 10% OFF with Code Xana10" 
          style="max-width:400px; width:100%; border-radius:10px;">
@@ -350,7 +350,7 @@
 <!-- Force Load -->
   <!-- Insight Tweet Card -->
   <div class="vault-card insight-tweet fade-in" style="text-align:center;">
-    <img src="images/tweet.png" 
+    <img src="/images/tweet.png" 
          alt="I thought I needed followers, but I needed better products." 
          title="Tweet: Better Products Drive Sales – Not Just Followers" 
          style="max-width:400px; width:100%; border-radius:10px;">
@@ -358,7 +358,7 @@
 <!--Force load -->
   <!-- Creator Contrast Card -->
   <div class="vault-card contrast-choice fade-in" style="text-align:center;">
-    <img src="images/2types.png" 
+    <img src="/images/2types.png" 
          alt="Two types of creators: one downloads, one builds." 
          title="Creator Types: Template Collector vs Builder-Doer" 
          style="max-width:400px; width:100%; border-radius:10px;">
