🎯 Add real insert cards to Vault

--- a/vault.html
+++ b/vault.html
@@ -222,8 +222,8 @@
 
   <!-- Sticky Substack Join Bar -->
   <div class="sticky-banner">
-    💌 <strong>Join the 30-Day Focus Challenge:</strong>
-    <a href="#newsletter-signup" style="color: #d35400; font-weight: bold;">Sign up for free daily clarity tools</a>
+    💌 <strong>4th of July Sale:</strong>
+    <a href="#newsletter-signup" style="color: #d35400; font-weight: bold;">25% off on all products more than $25+ [promo Code: USA25 ] Hurry Sale won't last long!'</a>
   </div>
 
   <!-- Hero Section -->
@@ -354,26 +354,7 @@
 <!-- VAULT INSERT CARDS with SEO -->
 <div class="vault-insert-row" style="display:flex; flex-direction:column; gap:30px; align-items:center; margin: 40px 0;">
 
-<!-- 🎆 July 4th Sale Banner with Countdown + Fireworks -->
-<div class="vault-card flash-sale fade-in" style="text-align:center; position:relative; padding-bottom: 1rem;">
-  <a href="https://grafixartistry6.gumroad.com/l/gxpksf?utm_source=anchorstack&utm_medium=promo&utm_campaign=july4" target="_blank">
-    <img src="images/25percentoff.png"
-         alt="25% OFF July 4th Sale – Use Code FIREWORKS25"
-         title="July 4th Flash Sale – 25% Off All Vault Kits!"
-         style="max-width:400px; width:100%; border-radius:10px;">
-  </a>
-  <div id="countdown" style="font-weight:bold; font-size:1rem; color:#d35400; margin-top:0.5rem;"></div>
-  <div id="fireworks" style="font-size: 1.2rem; margin-top: 0.25rem;">🎇 🎆 ✨ 🎆 🎇</div>
 </div>
-
-
-
-</div>
-
-
-  <!-- END OF PRODUCTS -->
- 
-
 
  <!-- AnchorStack Vault Promo Panel -->
   <section style="text-align: center; margin: 2rem 0;">
