--- a/vault.html
+++ b/vault.html
@@ -367,7 +367,7 @@
 
  <!-- AnchorStack Vault Promo Panel -->
   <section style="text-align: center; margin: 2rem 0;">
-    <img src="/images/promo.jpg"
+    <img src="images/promo.jpg"
          alt="AnchorStack Vault — Creator Tools Without the Noise"
          style="width: 100%; max-width: 900px; border-radius: 8px;" />
   </section>
@@ -383,7 +383,7 @@
       <div style="position: absolute; top: 0.5rem; left: 0.5rem; background-color: #3498db; color: white; font-size: 0.8rem; font-weight: bold; padding: 0.25rem 0.5rem; border-radius: 4px;">
         🚧 Coming Soon
       </div>
-      <img src="/images/resized_image_1.jpg" alt="The 30-Day Product Sprint" style="width: 100%; border-radius: 6px;">
+      <img src="images/resized_image_1.jpg" alt="The 30-Day Product Sprint" style="width: 100%; border-radius: 6px;">
       <h3>The 30-Day Product Sprint</h3>
       <p>Build a digital product in one month.</p>
       <a href="https://rickyjarnagin.substack.com/subscribe" 
@@ -402,7 +402,7 @@
       <div style="position: absolute; top: 0.5rem; left: 0.5rem; background-color: #3498db; color: white; font-size: 0.8rem; font-weight: bold; padding: 0.25rem 0.5rem; border-radius: 4px;">
         🚧 Coming Soon
       </div>
-      <img src="/images/resized_image_2.jpg" alt="Founding Affiliate Invite" style="width: 100%; border-radius: 6px;">
+      <img src="images/resized_image_2.jpg" alt="Founding Affiliate Invite" style="width: 100%; border-radius: 6px;">
       <h3>Founding Affiliate Invite</h3>
       <p>✨ Founding Affiliate Program </p> 
 <p>Become an AnchorStack Insider </p> 
@@ -435,7 +435,7 @@
       <div style="position: absolute; top: 0.5rem; left: 0.5rem; background-color: #3498db; color: white; font-size: 0.8rem; font-weight: bold; padding: 0.25rem 0.5rem; border-radius: 4px;">
         🚧 Coming Soon
       </div>
-      <img src="/images/resized_image_3.jpg" alt="The Calm Clarity Blueprint" style="width: 100%; border-radius: 6px;">
+      <img src="images/resized_image_3.jpg" alt="The Calm Clarity Blueprint" style="width: 100%; border-radius: 6px;">
       <h3>The Calm Clarity Blueprint</h3>
       <p>Digital Clarity Kit by Clarity Press.</p>
       <a href="https://rickyjarnagin.substack.com/subscribe" 
