🚀 Sync updates from anchorstack-clean (menu + fixes)

--- a/vault.html
+++ b/vault.html
@@ -270,9 +270,9 @@
 <!-- 🎇 4th of July Sale Banner -->
 <div class="sticky-banner fireworks-banner"
      style="background-color: #fff4e6; color: #d35400; font-weight: bold; text-align: center; padding: 1rem; border-bottom: 2px solid #ffa500;">
-  <a href="https://grafixartistry6.gumroad.com"
+  <a href="https://grafixartistry6.gumroad.com/l/xalvnc"
      style="color: #d35400; text-decoration: none; position: relative; display: inline-block;">
-    🎇 4th of July Sale: Get 25% OFF all products until midnight July 5!
+    🎇 4th of July Sale: Get 25% OFF all products until midnight July 5! Code USA25
     <span id="countdown" style="margin-left: 10px;">⏳ Loading...</span>
   </a>
 </div>
@@ -412,7 +412,7 @@
   <section style="text-align: center; margin: 2rem 0;">
     <img src="images/promo.jpg"
          alt="AnchorStack Vault — Creator Tools Without the Noise"
-         style="width: 100%; max-width: 900px; border-radius: 8px;" />
+         style="width: 100%; max-width: 800px; border-radius: 8px;" />
   </section>
 
 
