🔁 Update index and vault after final banner/image fix

--- a/vault.html
+++ b/vault.html
@@ -87,7 +87,7 @@
 </head>
 <body>
 
-
+<!-- 📣 Force Reload -->
 <!-- 📣 Image-Based Sticky Banner -->
 <div class="sticky-banner" style="top: 0; background: #fff; padding: 0; text-align: center; z-index: 999; border-bottom: 1px solid #ccc;">
   <a href="https://grafixartistry6.gumroad.com/l/xalvnc" target="_blank" rel="noopener">
