🚨 Trigger rebuild to update GitHub Pages

--- a/vault.html
+++ b/vault.html
@@ -86,7 +86,7 @@
 
 </head>
 <body>
-
+<!-- Trigger: July 3 rebuild -->
 <!-- 📣 Force Reload -->
 <!-- 📣 Image-Based Sticky Banner -->
 <div class="sticky-banner" style="top: 0; background: #fff; padding: 0; text-align: center; z-index: 999; border-bottom: 1px solid #ccc;">
