⚓ Replace homepage with menu layout

--- a/index.html
+++ b/index.html
@@ -1,69 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>AnchorStack</title>
-  <link rel="stylesheet" href="style.css" />
-  <style>
-    body {
-      font-family: system-ui, sans-serif;
-      background: #fff;
-      color: #333;
-      text-align: center;
-      margin: 0;
-      padding: 2rem;
-    }
-    header img {
-      height: 80px;
-      margin-bottom: 1rem;
-    }
-    h1 {
-      font-size: 2rem;
-      color: #005f56;
-    }
-    .subtitle {
-      font-weight: 600;
-      color: #444;
-      margin-bottom: 1.2rem;
-    }
-    .body-text {
-      max-width: 600px;
-      margin: 0 auto 2rem;
-      font-size: 1.1rem;
-    }
-    .cta-button {
-      background-color: #00796b;
-      color: white;
-      padding: 0.75rem 1.5rem;
-      border: none;
-      border-radius: 10px;
-      font-size: 1rem;
-      font-weight: bold;
-      cursor: pointer;
-      margin-bottom: 2rem;
-    }
-    .cta-button:hover {
-      background-color: #005f56;
-    }
-  </style>
-<!-- Trigger: July 3 rebuild -->
+  <meta charset="UTF-8">
+  <title>AnchorStack Admin Dashboard</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-
-    <img src="/images/logo.png" alt="AnchorStack Logo" />
-  </header>
-
-
-  <h1>AnchorStack</h1>
-  <p class="subtitle">Clarity Kits & Momentum Tools for Creators</p>
-  <p class="body-text">
-    The Focus Vault isn’t just another collection of templates — it’s a launch-ready toolkit built for clarity, consistency, and real momentum.
-  </p>
-  <p class="body-text">
-    From productivity templates to promo visuals, each kit is polished and packed for momentum. No fluff. Just systems that sell.
-  </p>
-  <button class="cta-button" onclick="window.location.href='vault.html'">→ Enter the Vault</button>
+  <h1>📋 AnchorStack Private Menu v2</h1>
+  <div id="link-container">Loading links...</div>
+  <script src="admin.js"></script>
 </body>
 </html>
