--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
   </p>
 
 <button class="cta-button" onclick="window.location.href='vault.html'">→ Enter the Vault</button>
+
+
+
 </body><grammarly-desktop-integration data-grammarly-shadow-root="true"><template shadowrootmode="open"><style>
       div.grammarly-desktop-integration {
         position: absolute;
@@ -99,4 +102,8 @@
       div.grammarly-desktop-integration:before {
         content: attr(data-content);
       }
-    </style><div aria-label="grammarly-integration" class="grammarly-desktop-integration" data-content='{"mode":"full","isActive":true,"isUserDisabled":false}' role="group" tabindex="-1"></div></template></grammarly-desktop-integration></html>
+    </style><div aria-label="grammarly-integration" class="grammarly-desktop-integration" data-content='{"mode":"full","isActive":true,"isUserDisabled":false}' role="group" tabindex="-1"></div></template></grammarly-desktop-integration>
+
+
+
+</html>
