--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/anchor.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AnchorStack - Creator Operating System</title>
+   <title>AnchorStack – Your Focus OS ✅</title>
     <meta name="description" content="Your creator operating system for focused work, clear thinking, and intentional building." />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
