--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="en">
   <head>
+<!-- Trigger Netlify rebuild: 2025-07-24 -->
+
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/anchor.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
